RESOLVED FIXED78730
Initial upstreaming of EditorClientBlackBerry
https://bugs.webkit.org/show_bug.cgi?id=78730
Summary Initial upstreaming of EditorClientBlackBerry
Mike Fenton
Reported 2012-02-15 12:43:25 PST
SSIA
Attachments
Patch (36.41 KB, patch)
2012-02-15 12:51 PST, Mike Fenton
rwlbuis: review-
Updated Patch (36.39 KB, patch)
2012-02-15 14:10 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-02-15 12:51:02 PST
Rob Buis
Comment 2 2012-02-15 13:22:42 PST
Comment on attachment 127217 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127217&action=review Looks good, can be cleaned up a bit more. > Source/WebKit/blackberry/WebCoreSupport/EditorClientBlackBerry.cpp:168 > + return m_webPagePrivate->m_dumpRenderTree->shouldEndEditingInDOMRange(range); We are a bit inconsistent in usage of newlines here, compare to shouldBeginEditing. We should probably choose one style within a file. > Source/WebKit/blackberry/WebCoreSupport/EditorClientBlackBerry.cpp:189 > + return m_webPagePrivate->m_dumpRenderTree->shouldChangeSelectedDOMRangeToDOMRangeAffinityStillSelecting(fromRange, toRange, static_cast<int>(affinity), stillSelecting); I wonder if the early return is ok here but that is something to investigate in a seperate bug. > Source/WebKit/blackberry/WebCoreSupport/EditorClientBlackBerry.h:63 > + virtual void registerCommandForUndo(WTF::PassRefPtr<EditCommand>); I think you can drop all WTF prefixes in the header.
Mike Fenton
Comment 3 2012-02-15 14:10:39 PST
Created attachment 127233 [details] Updated Patch
Rob Buis
Comment 4 2012-02-15 14:27:05 PST
Comment on attachment 127233 [details] Updated Patch Looks good.
WebKit Review Bot
Comment 5 2012-02-15 18:58:33 PST
Comment on attachment 127233 [details] Updated Patch Clearing flags on attachment: 127233 Committed r107870: <http://trac.webkit.org/changeset/107870>
WebKit Review Bot
Comment 6 2012-02-15 18:58:37 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7 2012-02-15 23:38:06 PST
Attachment 127233 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: dataTransfer.types (HTML5 drag & drop) should return DOMStringList Using index info to reconstruct a base tree... <stdin>:84: trailing whitespace. <stdin>:333: trailing whitespace. <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" <stdin>:334: trailing whitespace. width="300" height="300" onload="runRepaintTest()"> <stdin>:335: trailing whitespace. <script xlink:href="../../fast/repaint/resources/repaint.js" /> <stdin>:336: trailing whitespace. <script><![CDATA[ warning: squelched 16 whitespace errors warning: 21 lines add whitespace errors. Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 dataTransfer.types (HTML5 drag & drop) should return DOMStringList When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.